--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
             <div class="row portfolio">
                 <!-- Single Portfolio -->
                 <div class="col-lg-4 col-md-6 mix logo web graphic other wp">
-                    <div class="single-portfolio" style="background-image: url(assets/images/portfolio/foto1.jpg)">
+                    <div class="single-portfolio" style="background-image: url(/Portifolio/assets/images/portfolio/foto1.jpg)">
                         <div class="portfolio-icon text-center">
-                            <a href="assets/images/portfolio/foto1.jpg" data-lightbox="gallery" data-title="Foto 2">
+                            <a href="assets/images/portfolio/foto1.jpg" data-lightbox="gallery" data-title="Foto 1">
                                 <i class="fas fa-expand-arrows-alt"></i>
                             </a>
                         </div>
@@ -389,12 +389,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1Mg1FAyjXSdXepETedbwBbcAFM-AvWsb6/view"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="/Portifolio/assets/images/portfolio/video1.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>1</span></h4>
@@ -407,12 +406,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1oH5i0CMVh9xltpH_3h1ncrG5yp8KtYcd/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video2.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>2</span></h4>
@@ -425,12 +423,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1sbnMLgB1zLqQ-dQ75LPAb5PtUQUM7Zod/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video3.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>3</span></h4>
@@ -443,12 +440,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1jfcs5CIC1Hc_RoLN59tB5thsmyhzV99c/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video4.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>4</span></h4>
@@ -461,12 +457,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1s9Jv8eFINduIvokb3LHY2YKL5vXI_Iqe/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video5.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>5</span></h4>
@@ -479,12 +474,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1WaxDu4Wdeyt8YbYN1R3cy48VK1A_et2o/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video6.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>6</span></h4>
@@ -497,12 +491,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1IAIhpzIcYYlpri4YI_zpk0hPDqipufko/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video7.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>7</span></h4>
@@ -514,12 +507,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1Da2_B1OngnAJ1cRmMM6GDRYJ_YXoAoZ9/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video8.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>8</span></h4>
@@ -531,12 +523,11 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1oEK9dryZLSU0bVUwlQIMFWx9GfFfQoFt/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video9.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>9</span></h4>
@@ -548,16 +539,26 @@
                     <div class="single-portfolio"
                         style="background-image: url('assets/images/portfolio/video-thumb1.png'); background-size: cover; background-position: center;">
                         <div class="portfolio-icon text-center">
-                            <!-- Link que abre o vídeo no Google Drive -->
-                            <a class="play-button"
-                                href="https://drive.google.com/file/d/1-mTrpypRXTIH0BPMCK0lYfqPoQJq_H9k/view?usp=drive_link"
-                                target="_blank" rel="noopener noreferrer">
+                            <!-- Link para o vídeo com o caminho do vídeo em data-video -->
+                            <button class="play-button" onclick="openVideo(this)"
+                                data-video="assets/images/portfolio/video10.mp4">
                                 <i class="fas fa-play"></i>
-                            </a>
+                            </button>
                         </div>
                         <div class="portfolio-hover">
                             <h4>Vídeo <span>10</span></h4>
                         </div>
+                    </div>
+                </div>
+
+                <div id="videoModal" class="video-modal" onclick="closeVideo(event)">
+                    <div class="video-container">
+                        <button class="close-button" onclick="closeVideo(event)">
+                            <i class="fas fa-times"></i>
+                        </button>
+                        <iframe id="videoFrame" width="700" height="500" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
                 <!-- // Single Portfolio -->
